修改第一次访问的弹出菜单以及部分语言

--- a/public/locales/zh-HK/api.json
+++ b/public/locales/zh-HK/api.json
@@ -1,5 +1,5 @@
 {
-  "securityMessage": "我哋將你嘅 API 金鑰嘅安全擺喺首位，非常小心噉處理佢。你嘅金鑰將專門儲存喺你嘅瀏覽器入面，並且永遠唔會共享畀任何第三方實體。佢僅用於訪問 OpenAI API 呢項預期用途，唔會用於任何其他未經授權嘅用途。",
+  "securityMessage": "我哋將你嘅 API 金鑰嘅安全擺喺首位，非常小心噉處理佢。你嘅金鑰將專門儲存喺你嘅瀏覽器入面，並且永遠唔會共享畀任何第三方實體。",
   "apiEndpoint": {
     "inputLabel": "API 端點",
     "description": "如果你選擇非官方嘅 API 終端，佢充當代理。代理係你嘅設備同目標伺服器（呢度即係 OpenAI API）之間嘅中介，噉你就可以喺用唔到 OpenAI API 嘅地區使用。",
